2012-02-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* pandoradb.sql: Fixed an error with weight field of custom graphs.

2012-02-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed into function "get_events__with_user"
	when try get list events when empty list of groups for user.
	
	* include/api.php: fixed the auth.

	Bigfix merged from trunk.

2012-02-06  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk.  Improved the
	get all agents API function to added csv separator, and to
	retrieve more data as address, description, operating system
	and url address.  Added get_alert_template function.  
	Removed warning from get_all_agents function.

2012-02-03 Dario Rodriguez <dario.rodriguez@artica.es>

	* general/main_menu.php: Fixed godmode menu header visualization.

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * include/graph/functions_fsgraph.php: Fixed a bug in flash charts
        when there is no module data.

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Fixed a bug in flash charts due to
	my last commit.

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/graphs/functions_pchart.php
	 include/functions_visual_map.php: Improvement over module graphs in 
	 visual console and fixed bug in sparse graphs when 'avg only' is not
	 clicked.

2012-02-02  Sancho Lerena <slerena@artica.es>

        * godmode/massive/massive_edit_modules.php: Fixed problem with export
        server target edition. "None" was missing.


2012-01-31  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_reporting: Modified SLA reports when
	downtime planned.

2012-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php

	Bigfix merged from trunk.

2012-01-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: 
	